--- a/app/src/main/res/layout/title.xml
+++ b/app/src/main/res/layout/title.xml
@@ -4,6 +4,14 @@
     android:layout_width="match_parent"
     android:layout_height="?attr/actionBarSize">
 
+    <ImageView
+        android:id="@+id/iv_home"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_centerVertical="true"
+        android:layout_alignParentLeft="true"
+        android:layout_marginLeft="10dp"
+        android:src="@drawable/ic_home_black_24dp"/>
     <TextView
         android:id="@+id/tv_title_city"
         android:layout_width="wrap_content"
